RF: attempt to use virtualenvs for tests

--- a/master.cfg
+++ b/master.cfg
@@ -116,6 +116,9 @@ c['slavePortnum'] = 9989
 
 # Helper functions and constants
 class GithubBot(object):
+
+    need_nose = True
+
     def __init__(self, organization, repo, test_cmd, doc_build_cmd=None, built_doc_src=None):
         self.organization = organization
         self.repo = repo
@@ -163,19 +166,32 @@ class GithubBot(object):
     def _code_build_factory(self):
         factory = BuildFactory()
         factory.addStep(Git(repourl=self.git_url, mode='copy', retry=(15, 5)))
+        # Obviously requires virtualenv on the slave
         factory.addStep(ShellCommand(command=shlex.split(
-            "python setup.py build_ext --inplace")))
+            'virtualenv --system-site-packages venv')))
+        # Now we need the venv binary directory
+        factory.addStep(FileDownload('slave_scripts/bs_venv_dir.py',
+                                     'bs_venv_dir.py'))
         factory.addStep(SetProperty(command=shlex.split(
-            "python -c 'import os, sys; print os.getcwd(); sys.exit(0)'"),
-            property='absBuildDir'))
-        return factory
+            'python bs_venv_dir.py venv'),
+            property='venv_script_dir'))
+        # Set env, with virtualenv in front of the path
+        my_env={'PATH': WithProperties("%(venv_script_dir)s;${PATH}")}
+        # Install into virtualenv
+        factory.addStep(ShellCommand(command=[
+            'python' 'setup.py', 'install'], env=my_env))
+        # Add nose because we nearly always want it
+        if self.need_nose:
+            factory.addStep(ShellCommand(command=[
+                'easy_install', 'nose'], env=my_env))
+        return factory, my_env
 
     def factory(self, test_cmd=None):
         if test_cmd is None:
             test_cmd = self.test_cmd
-        factory = self._code_build_factory()
+        factory, env = self._code_build_factory()
         factory.addStep(ShellCommand(command=test_cmd,
-            env={'PYTHONPATH': [WithProperties('%s', 'absBuildDir')]}))
+            env=env))
         return factory
 
     def doc_factory(self,
@@ -188,12 +204,10 @@ class GithubBot(object):
             built_doc_src = self.built_doc_src
         if None in (doc_build_cmd, built_doc_src):
             raise ValueError("Need defined build command and doc source")
-        factory = self._code_build_factory()
+        factory, env = self._code_build_factory()
         if not doc_doctest_cmd is None:
-            factory.addStep(ShellCommand(command=doc_doctest_cmd,
-                        env={'PYTHONPATH': [WithProperties('%s', 'absBuildDir')]}))
-        factory.addStep(ShellCommand(command=doc_build_cmd,
-                    env={'PYTHONPATH': [WithProperties('%s', 'absBuildDir')]}))
+            factory.addStep(ShellCommand(command=doc_doctest_cmd, env=env))
+        factory.addStep(ShellCommand(command=doc_build_cmd, env=env))
         factory.addStep(DirectoryUpload(slavesrc=built_doc_src,
                     masterdest="public_html/nightly/" + self.repo + '/doc'))
         return factory
