Working version installing into virtualenv

--- a/master.cfg
+++ b/master.cfg
@@ -172,26 +172,32 @@ class GithubBot(object):
         # Now we need the venv binary directory
         factory.addStep(FileDownload('slave_scripts/bs_venv_dir.py',
                                      'bs_venv_dir.py'))
+        factory.addStep(FileDownload('slave_scripts/bs_abspath.py',
+                                     'bs_abspath.py'))
         factory.addStep(SetProperty(command=shlex.split(
             'python bs_venv_dir.py venv'),
             property='venv_script_dir'))
+        factory.addStep(SetProperty(command=shlex.split(
+            'python bs_abspath.py venv'),
+            property='venv_dir'))
         # Set env, with virtualenv in front of the path
-        my_env={'PATH': WithProperties("%(venv_script_dir)s;${PATH}")}
+        my_env={'PATH': WithProperties("%(venv_script_dir)s${PATH}")}
+        workdir = WithProperties("%(venv_dir)s")
         # Install into virtualenv
         factory.addStep(ShellCommand(command=[
-            'python' 'setup.py', 'install'], env=my_env))
+            'python', 'setup.py', 'install'], env=my_env))
         # Add nose because we nearly always want it
         if self.need_nose:
             factory.addStep(ShellCommand(command=[
                 'easy_install', 'nose'], env=my_env))
-        return factory, my_env
+        return factory, my_env, workdir
 
     def factory(self, test_cmd=None):
         if test_cmd is None:
             test_cmd = self.test_cmd
-        factory, env = self._code_build_factory()
+        factory, env, workdir = self._code_build_factory()
         factory.addStep(ShellCommand(command=test_cmd,
-            env=env))
+            env=env, workdir=workdir))
         return factory
 
     def doc_factory(self,
@@ -204,7 +210,7 @@ class GithubBot(object):
             built_doc_src = self.built_doc_src
         if None in (doc_build_cmd, built_doc_src):
             raise ValueError("Need defined build command and doc source")
-        factory, env = self._code_build_factory()
+        factory, env, workdir = self._code_build_factory()
         if not doc_doctest_cmd is None:
             factory.addStep(ShellCommand(command=doc_doctest_cmd, env=env))
         factory.addStep(ShellCommand(command=doc_build_cmd, env=env))
@@ -258,7 +264,7 @@ def nptest_command(pkg_name,
 
 
 nibabel_bot = GithubBot('nipy', 'nibabel',
-    test_cmd = shlex.split('nosetests --verbosity=3 --with-doctest nibabel'),
+    test_cmd = shlex.split('nosetests --verbosity=3 --exe --with-doctest nibabel'),
     doc_build_cmd = "cd doc && make html",
     built_doc_src = "build/html"
 )
@@ -284,7 +290,7 @@ nipy_alexis_bot = GithubBot('alexis-roche', 'nipy',
     built_doc_src = "doc/dist"
 )
 dipy_bot = GithubBot('nipy', 'dipy',
-    test_cmd = shlex.split('nosetests --verbosity=3 --with-doctest dipy'),
+    test_cmd = shlex.split('nosetests --verbosity=3 --exe --with-doctest dipy'),
 )
 # dipy bot for linux machines with optional dependencies that need an X window
 # for testing
