Remove cd commands for nptest - not needed
We needed them to avoid running in the source tree; now we're running out of a
virtualenv, in the virtualenv directory.

--- a/master.cfg
+++ b/master.cfg
@@ -269,23 +269,23 @@ nibabel_bot = GithubBot('nipy', 'nibabel',
     built_doc_src = "build/html"
 )
 nitime_bot = GithubBot('nipy', 'nitime',
-    test_cmd = nptest_command('nitime', verbose=None, cd=True)
+    test_cmd = nptest_command('nitime', verbose=None)
 )
 nitime_arokem_bot = GithubBot('arokem','nitime',
-    test_cmd = nptest_command('nitime', verbose=None, cd=True)
+    test_cmd = nptest_command('nitime', verbose=None)
 )
 nipy_bot = GithubBot('nipy', 'nipy',
-    test_cmd = nptest_command('nipy', doctests=True, cd=True),
+    test_cmd = nptest_command('nipy', doctests=True),
     doc_build_cmd = "cd doc && make dist",
     built_doc_src = "doc/dist"
 )
 nipy_mbi_bot = GithubBot('matthew-brett', 'nipy',
-    test_cmd = nptest_command('nipy', doctests=True, cd=True),
+    test_cmd = nptest_command('nipy', doctests=True),
     doc_build_cmd = "cd doc && make dist",
     built_doc_src = "doc/dist"
 )
 nipy_alexis_bot = GithubBot('alexis-roche', 'nipy',
-    test_cmd = nptest_command('nipy', doctests=True, cd=True),
+    test_cmd = nptest_command('nipy', doctests=True),
     doc_build_cmd = "cd doc && make dist",
     built_doc_src = "doc/dist"
 )
@@ -298,7 +298,7 @@ dipy_bot_nox = GithubBot('nipy', 'dipy',
     test_cmd = shlex.split('xvfb-run --server-args="-screen 0 1024x768x24" nosetests --verbosity=3 --with-doctest dipy'),
 )
 nipype_bot = GithubBot('nipy', 'nipype',
-    test_cmd = nptest_command('nipype', doctests=True, cd=True)
+    test_cmd = nptest_command('nipype', doctests=True)
 )
 
 ####### CHANGESOURCES
