RF: update launch parameters for afniflots machine
Needs update for python 2.7.

--- a/edu.berkeley.bic.afni.osx-mini.plist
+++ b/edu.berkeley.bic.afni.osx-mini.plist
@@ -10,12 +10,10 @@
         <dict>
             <!-- Need local installs on the PATH - for nosetests in particular-->
             <key>PATH</key>
-            <string>/Library/Frameworks/Python.framework/Versions/2.5/bin:/bin:/usr/bin:/usr/sbin:/sbin:/usr/local/bin:/Users/buildslave/.local/bin</string>
-            <!-- Python 2.5 needs the local installs on the PYTHONPATH -->
-            <key>PYTHONPATH</key>
-            <string>/Users/buildslave/.local/lib/python2.5/site-packages</string>
+            <string>/Library/Frameworks/Python.framework/Versions/2.7/bin:/bin:/usr/bin:/usr/sbin:/sbin:/usr/local/bin:/Users/buildslave/Library/Python/2.7/bin</string>
+	    <key>MACOSX_DEPLOYMENT_TARGET</key>
+	    <string>10.3</string>
         </dict>
-
         <!-- Change this to the user you want to run buildbot as -->
         <key>UserName</key>
         <string>buildslave</string>
