RF: add dependency installation to code building

--- a/master.cfg
+++ b/master.cfg
@@ -119,13 +119,23 @@ class GithubBot(object):
 
     need_nose = True
 
-    def __init__(self, organization, repo, test_cmd, doc_build_cmd=None, built_doc_src=None):
+    def __init__(self,
+                 organization,
+                 repo,
+                 test_cmd,
+                 doc_build_cmd=None,
+                 built_doc_src=None,
+                 easy_depends=(),
+                 pip_depends=()):
         self.organization = organization
         self.repo = repo
         self.git_url = "git://github.com/%s/%s.git" % (organization, repo)
         self.test_cmd = test_cmd
         self.doc_build_cmd = doc_build_cmd
         self.built_doc_src = built_doc_src
+        # Dependencies for install / test
+        self.easy_depends = easy_depends # easy_install installs
+        self.pip_depends = pip_depends # pip
 
     def poller(self, branch="master", interval=300):
         return GitPoller(
@@ -183,13 +193,16 @@ class GithubBot(object):
         # Set env, with virtualenv in front of the path
         my_env={'PATH': WithProperties("%(venv_script_dir)s${PATH}")}
         workdir = WithProperties("%(venv_dir)s")
+        # Add install and runtime dependencies
+        for pkg_spec in self.easy_depends:
+            factory.addStep(ShellCommand(command=[
+                        'easy_install', pkg_spec], env=my_env))
+        for pkg_spec in self.pip_depends:
+            factory.addStep(ShellCommand(command=[
+                        'pip', 'install', pkg_spec], env=my_env))
         # Install into virtualenv
         factory.addStep(ShellCommand(command=[
             'python', 'setup.py', 'install'], env=my_env))
-        # Add nose because we nearly always want it
-        if self.need_nose:
-            factory.addStep(ShellCommand(command=[
-                'easy_install', 'nose'], env=my_env))
         return factory, my_env, workdir
 
     def factory(self, test_cmd=None):
@@ -266,36 +279,44 @@ def nptest_command(pkg_name,
 nibabel_bot = GithubBot('nipy', 'nibabel',
     test_cmd = shlex.split('nosetests --verbosity=3 --exe --with-doctest nibabel'),
     doc_build_cmd = "cd doc && make html",
-    built_doc_src = "build/html"
+    built_doc_src = "build/html",
+    easy_depends = ('nose',)
 )
 nitime_bot = GithubBot('nipy', 'nitime',
-    test_cmd = nptest_command('nitime', verbose=None)
+    test_cmd = nptest_command('nitime', verbose=None),
+    easy_depends = ('nose',)
 )
 nitime_arokem_bot = GithubBot('arokem','nitime',
-    test_cmd = nptest_command('nitime', verbose=None)
+    test_cmd = nptest_command('nitime', verbose=None),
+    easy_depends = ('nose',)
 )
 nipy_bot = GithubBot('nipy', 'nipy',
     test_cmd = nptest_command('nipy', doctests=True),
     doc_build_cmd = "cd doc && make dist",
-    built_doc_src = "doc/dist"
+    built_doc_src = "doc/dist",
+    easy_depends = ('nose', 'nibabel')
 )
 nipy_mbi_bot = GithubBot('matthew-brett', 'nipy',
     test_cmd = nptest_command('nipy', doctests=True),
     doc_build_cmd = "cd doc && make dist",
-    built_doc_src = "doc/dist"
+    built_doc_src = "doc/dist",
+    easy_depends = ('nose', 'nibabel')
 )
 nipy_alexis_bot = GithubBot('alexis-roche', 'nipy',
     test_cmd = nptest_command('nipy', doctests=True),
     doc_build_cmd = "cd doc && make dist",
-    built_doc_src = "doc/dist"
+    built_doc_src = "doc/dist",
+    easy_depends = ('nose', 'nibabel')
 )
 dipy_bot = GithubBot('nipy', 'dipy',
     test_cmd = shlex.split('nosetests --verbosity=3 --exe --with-doctest dipy'),
+    easy_depends = ('nose', 'nibabel')
 )
-# dipy bot for linux machines with optional dependencies that need an X window
+# dipy bot for linux machines with optional easy_depends that need an X window
 # for testing
 dipy_bot_nox = GithubBot('nipy', 'dipy',
     test_cmd = shlex.split('xvfb-run --server-args="-screen 0 1024x768x24" nosetests --verbosity=3 --with-doctest dipy'),
+    easy_depends = ('nose', 'nibabel')
 )
 nipype_bot = GithubBot('nipy', 'nipype',
     test_cmd = nptest_command('nipype', doctests=True)
