RF: easy_install sphinx for doc build

--- a/master.cfg
+++ b/master.cfg
@@ -126,7 +126,8 @@ class GithubBot(object):
                  doc_build_cmd=None,
                  built_doc_src=None,
                  easy_depends=(),
-                 pip_depends=()):
+                 pip_depends=(),
+                 doc_easy_depends=('sphinx',)):
         self.organization = organization
         self.repo = repo
         self.git_url = "git://github.com/%s/%s.git" % (organization, repo)
@@ -136,6 +137,7 @@ class GithubBot(object):
         # Dependencies for install / test
         self.easy_depends = easy_depends # easy_install installs
         self.pip_depends = pip_depends # pip
+        self.doc_easy_depends = doc_easy_depends # easy_installs for docs
 
     def poller(self, branch="master", interval=300):
         return GitPoller(
@@ -224,6 +226,9 @@ class GithubBot(object):
         if None in (doc_build_cmd, built_doc_src):
             raise ValueError("Need defined build command and doc source")
         factory, env, workdir = self._code_build_factory()
+        for pkg_spec in self.doc_easy_depends:
+            factory.addStep(ShellCommand(command=[
+                        'easy_install', pkg_spec], env=env))
         if not doc_doctest_cmd is None:
             factory.addStep(ShellCommand(command=doc_doctest_cmd, env=env))
         factory.addStep(ShellCommand(command=doc_build_cmd, env=env))
