RF: move bs scripts into single script file

--- a/master.cfg
+++ b/master.cfg
@@ -182,15 +182,13 @@ class GithubBot(object):
         factory.addStep(ShellCommand(command=shlex.split(
             'virtualenv --system-site-packages venv')))
         # Now we need the venv binary directory
-        factory.addStep(FileDownload('slave_scripts/bs_venv_dir.py',
-                                     'bs_venv_dir.py'))
-        factory.addStep(FileDownload('slave_scripts/bs_abspath.py',
-                                     'bs_abspath.py'))
+        factory.addStep(FileDownload('slave_scripts/bs_tools.py',
+                                     'bs_tools.py'))
         factory.addStep(SetProperty(command=shlex.split(
-            'python bs_venv_dir.py venv'),
+            'python bs_tools.py path-prepend-dir venv'),
             property='venv_script_dir'))
         factory.addStep(SetProperty(command=shlex.split(
-            'python bs_abspath.py venv'),
+            'python bs_tools.py abspath venv'),
             property='venv_dir'))
         # Set env, with virtualenv in front of the path
         my_env={'PATH': WithProperties("%(venv_script_dir)s${PATH}")}
