BF: fix script command name

--- a/master.cfg
+++ b/master.cfg
@@ -185,7 +185,7 @@ class GithubBot(object):
         factory.addStep(FileDownload('slave_scripts/bs_tools.py',
                                      'bs_tools.py'))
         factory.addStep(SetProperty(command=shlex.split(
-            'python bs_tools.py path-prepend-dir venv'),
+            'python bs_tools.py path-prepend-str venv'),
             property='venv_script_dir'))
         factory.addStep(SetProperty(command=shlex.split(
             'python bs_tools.py abspath venv'),
