BF: fix dipy scheduler bot names
Nipy changes getting sent to the dipy bots causing failures.

--- a/master.cfg
+++ b/master.cfg
@@ -406,13 +406,13 @@ c['schedulers'] = [
     nipy_bot.nightly_scheduler(['nipy-bdist-mpkg-3.3'], 'egg-33', 2, 30, True),
     # Dipy
     # Windows 32 nightly builds
-    nipy_bot.nightly_scheduler(['dipy-bdist32-26'], 'dipy-exe-26', 3, 10, True),
-    nipy_bot.nightly_scheduler(['dipy-bdist32-27'], 'dipy-exe-27', 3, 20, True),
-    nipy_bot.nightly_scheduler(['dipy-bdist32-32'], 'dipy-exe-32', 3, 30, True),
+    dipy_bot.nightly_scheduler(['dipy-bdist32-26'], 'dipy-exe-26', 3, 10, True),
+    dipy_bot.nightly_scheduler(['dipy-bdist32-27'], 'dipy-exe-27', 3, 20, True),
+    dipy_bot.nightly_scheduler(['dipy-bdist32-32'], 'dipy-exe-32', 3, 30, True),
     # OSX nightlies
-    nipy_bot.nightly_scheduler(['dipy-bdist-mpkg-2.6'], 'dipy-egg-26', 3, 10, True),
-    nipy_bot.nightly_scheduler(['dipy-bdist-mpkg-2.7'], 'dipy-egg-27', 3, 20, True),
-    nipy_bot.nightly_scheduler(['dipy-bdist-mpkg-3.3'], 'dipy-egg-33', 3, 30, True),
+    dipy_bot.nightly_scheduler(['dipy-bdist-mpkg-2.6'], 'dipy-egg-26', 3, 10, True),
+    dipy_bot.nightly_scheduler(['dipy-bdist-mpkg-2.7'], 'dipy-egg-27', 3, 20, True),
+    dipy_bot.nightly_scheduler(['dipy-bdist-mpkg-3.3'], 'dipy-egg-33', 3, 30, True),
 ]
 
 # Some factories
