NF: put in builders, schedulers for Min's machine

--- a/master.cfg
+++ b/master.cfg
@@ -101,6 +101,7 @@ osx_tiger_ppc_slaves = ['osx-mini']
 debian_ppc_slaves = ['debian-ppc-32']
 osx_leopard_intel_slaves = ['osx-10.5']
 osx_snowleopard_slaves = ['osx-10.6']
+osx_mountainlion_slaves = ['osx-10.8']
 xp_32_slaves = ['xp-mini']
 win7_64_slaves = ['mike-win7-64']
 sparc_slaves = ['nd-bb-slave-sparc']
@@ -352,6 +353,7 @@ c['schedulers'] = [
                            'nibabel-py2.6-arm',
                            'nibabel-py2.7-osx-10.4-ppc',
                            'nibabel-py2.7-osx-10.6',
+                           'nibabel-py2.7-osx-10.8',
                            'nibabel-py2.6-osx-10.5-ppc',
                            'nibabel-py2.6-osx-10.5-intel',
                           ]),
@@ -360,6 +362,7 @@ c['schedulers'] = [
                           'nitime-py2.6-xp',
                           'nitime-py2.7-osx-10.4-ppc',
                           'nitime-py2.7-osx-10.6',
+                          'nitime-py2.7-osx-10.8',
                           'nitime-py2.6-osx-10.5-ppc',
                           'nitime-py2.6-osx-10.5-intel',
                          ]),
@@ -371,6 +374,7 @@ c['schedulers'] = [
                         'nipy-py2.6-arm',
                         'nipy-py2.7-osx-10.4-ppc',
                         'nipy-py2.7-osx-10.6',
+                        'nipy-py2.7-osx-10.8',
                         'nipy-py2.6-osx-10.5-ppc',
                         'nipy-py2.6-osx-10.5-intel',
                        ]),
@@ -378,6 +382,7 @@ c['schedulers'] = [
                         'dipy-py2.6-32',
                         'dipy-py2.6-xp',
                         'dipy-py2.7-osx-10.6',
+                        'dipy-py2.7-osx-10.8',
                         'dipy-py2.6-osx-10.5-ppc',
                         'dipy-py2.6-osx-10.5-intel',
                        ]),
@@ -790,6 +795,7 @@ c['builders'] += nibabel_bot.build_builders(
      ('nibabel-py2.6-32', linux_32_slaves),
      ('nibabel-py2.7-osx-10.4-ppc', osx_tiger_ppc_slaves),
      ('nibabel-py2.7-osx-10.6', osx_snowleopard_slaves),
+     ('nibabel-py2.7-osx-10.8', osx_mountainlion_slaves),
      ('nibabel-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('nibabel-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
      ('nibabel-py2.7-ppc', debian_ppc_slaves),
@@ -802,6 +808,7 @@ c['builders'] += nitime_bot.build_builders(
      ('nitime-py2.6-32', linux_32_slaves),
      ('nitime-py2.7-osx-10.4-ppc', osx_tiger_ppc_slaves),
      ('nitime-py2.7-osx-10.6', osx_snowleopard_slaves),
+     ('nitime-py2.7-osx-10.8', osx_mountainlion_slaves),
      ('nitime-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('nitime-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
      ('nitime-py2.6-arm', arm_slaves),
@@ -819,6 +826,7 @@ c['builders'] += nipy_bot.build_builders(
      ('nipy-py2.6-32', linux_32_slaves),
      ('nipy-py2.7-osx-10.4-ppc', osx_tiger_ppc_slaves),
      ('nipy-py2.7-osx-10.6', osx_snowleopard_slaves),
+     ('nipy-py2.7-osx-10.8', osx_mountainlion_slaves),
      ('nipy-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('nipy-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
      ('nipy-py2.7-ppc', debian_ppc_slaves),
@@ -847,6 +855,7 @@ c['builders'] += dipy_bot_nox.build_builders(
 ))
 c['builders'] += dipy_bot.build_builders((
      ('dipy-py2.7-osx-10.6', osx_snowleopard_slaves),
+     ('dipy-py2.7-osx-10.8', osx_mountainlion_slaves),
      ('dipy-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('dipy-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
      ('dipy-py2.6-arm', arm_slaves),
