NF: add required dependencies for nipype

--- a/master.cfg
+++ b/master.cfg
@@ -323,7 +323,8 @@ dipy_bot_nox = GithubBot('nipy', 'dipy',
     easy_depends = ('nose', 'nibabel')
 )
 nipype_bot = GithubBot('nipy', 'nipype',
-    test_cmd = nptest_command('nipype', doctests=True)
+    test_cmd = nptest_command('nipype', doctests=True),
+    easy_depends = ('nose', 'nibabel', 'networkx', 'Traits')
 )
 
 ####### CHANGESOURCES
