NF: adding full range of nipype slaves

--- a/master.cfg
+++ b/master.cfg
@@ -865,11 +865,16 @@ c['builders'] += dipy_bot.build_builders((
 c['builders'] += nipype_bot.build_builders(
     (('nipype-py2.6', linux_64_slaves),
      ('nipype-py2.6-32', linux_32_slaves),
+     ('nipype-py2.7-osx-10.6', osx_snowleopard_slaves),
+     ('nipype-py2.7-osx-10.8', osx_mountainlion_slaves),
      ('nipype-py2.7-osx-10.4-ppc', osx_tiger_ppc_slaves),
      ('nipype-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('nipype-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
-     ('nipype-py2.6-arm', arm_slaves)))
+     ('nipype-py2.6-arm', arm_slaves),
+     ('nipype-py2.6-xp', xp_32_slaves),
+     ('nipype-py2.6-sparc', sparc_slaves)))
 
+""" Disabling these guys; they haven't worked for a while
 c['builders'].append(
     BuilderConfig(name="buildout-test2.6",
       slavenames=experimental,
@@ -882,6 +887,7 @@ c['builders'].append(
     BuilderConfig(name="buildout-test2.4",
       slavenames=experimental,
       factory=factory_buildout_nibabel('python2.4')))
+"""
 
 ####### STATUS TARGETS
 
