BF: add all standard nipype bot schedulers

--- a/master.cfg
+++ b/master.cfg
@@ -388,10 +388,13 @@ c['schedulers'] = [
                         'dipy-py2.6-osx-10.5-intel',
                        ]),
     nipype_bot.scheduler(['nipype-py2.6',
-                        'nipype-py2.6-32',
-                        'nipype-py2.7-osx-10.4-ppc',
-                        'nipype-py2.6-osx-10.5-ppc',
-                        'nipype-py2.6-osx-10.5-intel',
+                          'nipype-py2.6-32',
+                          'nipype-py2.6-xp',
+                          'nipype-py2.7-osx-10.6',
+                          'nipype-py2.7-osx-10.8',
+                          'nipype-py2.7-osx-10.4-ppc',
+                          'nipype-py2.6-osx-10.5-ppc',
+                          'nipype-py2.6-osx-10.5-intel',
                        ]),
     nipy_bot.nightly_scheduler(['nipy-doc-builder'], 'doc', 2, 01, True),
     nibabel_bot.nightly_scheduler(['nibabel-doc-builder'], 'doc', 2, 20, True),
