NF: add regreg bots

--- a/master.cfg
+++ b/master.cfg
@@ -326,6 +326,10 @@ nipype_bot = GithubBot('nipy', 'nipype',
     test_cmd = nptest_command('nipype', doctests=True),
     easy_depends = ('nose', 'nibabel', 'networkx', 'Traits')
 )
+regreg_bot = GithubBot('regreg', 'regreg',
+    test_cmd = shlex.split('nosetests --verbosity=3 --exe --with-doctest regreg'),
+    easy_depends = ('nose')
+)
 
 ####### CHANGESOURCES
 
@@ -338,7 +342,9 @@ c['change_source'] = [bot.poller() for bot in (nibabel_bot,
                                                nitime_bot,
                                                nipy_bot,
                                                dipy_bot,
-                                               nipype_bot)]
+                                               nipype_bot,
+                                               regreg_bot,
+                                              )]
 
 
 ####### SCHEDULERS
@@ -395,6 +401,15 @@ c['schedulers'] = [
                           'nipype-py2.7-osx-10.4-ppc',
                           'nipype-py2.6-osx-10.5-ppc',
                           'nipype-py2.6-osx-10.5-intel',
+                       ]),
+    regreg_bot.scheduler(['regreg-py2.6',
+                          'regreg-py2.6-32',
+                          'regreg-py2.6-xp',
+                          'regreg-py2.7-osx-10.6',
+                          'regreg-py2.7-osx-10.8',
+                          'regreg-py2.7-osx-10.4-ppc',
+                          'regreg-py2.6-osx-10.5-ppc',
+                          'regreg-py2.6-osx-10.5-intel',
                        ]),
     nipy_bot.nightly_scheduler(['nipy-doc-builder'], 'doc', 2, 01, True),
     nibabel_bot.nightly_scheduler(['nibabel-doc-builder'], 'doc', 2, 20, True),
@@ -876,6 +891,17 @@ c['builders'] += nipype_bot.build_builders(
      ('nipype-py2.6-arm', arm_slaves),
      ('nipype-py2.6-xp', xp_32_slaves),
      ('nipype-py2.6-sparc', sparc_slaves)))
+c['builders'] += regreg_bot.build_builders(
+    (('regreg-py2.6', linux_64_slaves),
+     ('regreg-py2.6-32', linux_32_slaves),
+     ('regreg-py2.7-osx-10.6', osx_snowleopard_slaves),
+     ('regreg-py2.7-osx-10.8', osx_mountainlion_slaves),
+     ('regreg-py2.7-osx-10.4-ppc', osx_tiger_ppc_slaves),
+     ('regreg-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
+     ('regreg-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
+     ('regreg-py2.6-arm', arm_slaves),
+     ('regreg-py2.6-xp', xp_32_slaves),
+     ('regreg-py2.6-sparc', sparc_slaves)))
 
 """ Disabling these guys; they haven't worked for a while
 c['builders'].append(
