BF: fix easy_depends for regreg (string to tuple)

--- a/master.cfg
+++ b/master.cfg
@@ -328,7 +328,8 @@ nipype_bot = GithubBot('nipy', 'nipype',
 )
 regreg_bot = GithubBot('regreg', 'regreg',
     test_cmd = shlex.split('nosetests --verbosity=3 --exe --with-doctest regreg'),
-    easy_depends = ('nose')
+    easy_depends = ('nose',),
+    src_subdir = 'code'
 )
 
 ####### CHANGESOURCES
