NF: add ability to have custom source directory
regreg has source in 'code' subdirectory.

--- a/master.cfg
+++ b/master.cfg
@@ -128,7 +128,8 @@ class GithubBot(object):
                  built_doc_src=None,
                  easy_depends=(),
                  pip_depends=(),
-                 doc_easy_depends=('sphinx',)):
+                 doc_easy_depends=('sphinx',),
+                 src_subdir=None):
         self.organization = organization
         self.repo = repo
         self.git_url = "git://github.com/%s/%s.git" % (organization, repo)
@@ -139,6 +140,7 @@ class GithubBot(object):
         self.easy_depends = easy_depends # easy_install installs
         self.pip_depends = pip_depends # pip
         self.doc_easy_depends = doc_easy_depends # easy_installs for docs
+        self.src_subdir = src_subdir # Subdirectory containing source
 
     def poller(self, branch="master", interval=300):
         return GitPoller(
@@ -202,8 +204,16 @@ class GithubBot(object):
             factory.addStep(ShellCommand(command=[
                         'pip', 'install', pkg_spec], env=my_env))
         # Install into virtualenv
-        factory.addStep(ShellCommand(command=[
-            'python', 'setup.py', 'install'], env=my_env))
+        install_cmd = ['python', 'setup.py', 'install']
+        if not self.src_subdir is None:
+            factory.addStep(SetProperty(command=[
+                'python', 'bs_tools.py', 'abspath', self.src_subdir],
+                property='src_path'))
+            build_workdir = WithProperties("%(src_path)s")
+        else:
+            build_workdir = None
+        factory.addStep(ShellCommand(command=install_cmd, env=my_env,
+                        workdir=build_workdir))
         return factory, my_env, workdir
 
     def factory(self, test_cmd=None):
