RF: try to use virtualenvs for other pythons

--- a/master.cfg
+++ b/master.cfg
@@ -178,12 +178,21 @@ class GithubBot(object):
                 minute=minute,
                 onlyIfChanged=ifchanged)
 
-    def _code_build_factory(self):
+    def _code_build_factory(self,
+                            python=None,
+                            easy_depends=None,
+                            pip_depends=None):
+        if python is None:
+            python='python'
+        if easy_depends is None:
+            easy_depends = self.easy_depends
+        if pip_depends is None:
+            pip_depends = self.pip_depends
         factory = BuildFactory()
         factory.addStep(Git(repourl=self.git_url, mode='copy', retry=(15, 5)))
         # Obviously requires virtualenv on the slave
         factory.addStep(ShellCommand(command=shlex.split(
-            'virtualenv --system-site-packages venv')))
+            'virtualenv --python=%s --system-site-packages venv' % python)))
         # Now we need the venv binary directory
         factory.addStep(FileDownload('slave_scripts/bs_tools.py',
                                      'bs_tools.py'))
@@ -197,10 +206,10 @@ class GithubBot(object):
         my_env={'PATH': WithProperties("%(venv_script_dir)s${PATH}")}
         workdir = WithProperties("%(venv_dir)s")
         # Add install and runtime dependencies
-        for pkg_spec in self.easy_depends:
+        for pkg_spec in easy_depends:
             factory.addStep(ShellCommand(command=[
                         'easy_install', pkg_spec], env=my_env))
-        for pkg_spec in self.pip_depends:
+        for pkg_spec in pip_depends:
             factory.addStep(ShellCommand(command=[
                         'pip', 'install', pkg_spec], env=my_env))
         # Install into virtualenv
@@ -216,10 +225,15 @@ class GithubBot(object):
                         workdir=build_workdir))
         return factory, my_env, workdir
 
-    def factory(self, test_cmd=None):
+    def factory(self,
+                test_cmd=None,
+                python=None,
+                easy_depends=None,
+                pip_depends=None):
         if test_cmd is None:
             test_cmd = self.test_cmd
-        factory, env, workdir = self._code_build_factory()
+        factory, env, workdir = self._code_build_factory(
+            python, easy_depends, pip_depends)
         factory.addStep(ShellCommand(command=test_cmd,
             env=env, workdir=workdir))
         return factory
@@ -245,8 +259,12 @@ class GithubBot(object):
                     masterdest="public_html/nightly/" + self.repo + '/doc'))
         return factory
 
-    def build_builders(self, name_slavenames, test_cmd=None):
-        factory = self.factory(test_cmd)
+    def build_builders(self, name_slavenames,
+                       test_cmd=None,
+                       python=None,
+                       easy_depends=None,
+                       pip_depends=None):
+        factory = self.factory(test_cmd, python, easy_depends, pip_depends)
         return self._factory_builders(factory, name_slavenames)
 
     def _factory_builders(self, factory, name_slavenames):
@@ -833,6 +851,13 @@ c['builders'] += nibabel_bot.build_builders(
      ('nibabel-py2.6-xp', xp_32_slaves),
      ('nibabel-py2.7-win7', win7_64_slaves),
      ('nibabel-py2.6-sparc', sparc_slaves)))
+# Python 3.2 into virtualenv
+c['builders'] += nibabel_bot.build_builders(
+    (('nibabel-py3.2', linux_64_slaves),),
+    python='python3.2')
+c['builders'] += nibabel_bot.build_builders(
+    (('nibabel-py3.3', osx_snowleopard_slaves),),
+    python='python3.3')
 c['builders'] += nitime_bot.build_builders(
     (('nitime-py2.6', linux_64_slaves),
      ('nitime-py2.6-32', linux_32_slaves),
