NF: add Pydicom virtualenvs and schedulers

--- a/master.cfg
+++ b/master.cfg
@@ -392,6 +392,10 @@ c['schedulers'] = [
                            'nibabel-py2.7-osx-10.8',
                            'nibabel-py2.6-osx-10.5-ppc',
                            'nibabel-py2.6-osx-10.5-intel',
+                           'nibabel-py3.2',
+                           'nibabel-py3.3',
+                           'nibabel-py2.7-pyd0.9.7',
+                           'nibabel-py2.7-pyd0.9.8',
                           ]),
     nitime_bot.scheduler(['nitime-py2.6',
                           'nitime-py2.6-32',
@@ -413,6 +417,8 @@ c['schedulers'] = [
                         'nipy-py2.7-osx-10.8',
                         'nipy-py2.6-osx-10.5-ppc',
                         'nipy-py2.6-osx-10.5-intel',
+                        'nipy-py3.2',
+                        'nipy-py3.3',
                        ]),
     dipy_bot.scheduler(['dipy-py2.6',
                         'dipy-py2.6-32',
@@ -421,6 +427,8 @@ c['schedulers'] = [
                         'dipy-py2.7-osx-10.8',
                         'dipy-py2.6-osx-10.5-ppc',
                         'dipy-py2.6-osx-10.5-intel',
+                        'dipy-py3.2',
+                        'dipy-py3.3',
                        ]),
     nipype_bot.scheduler(['nipype-py2.6',
                           'nipype-py2.6-32',
@@ -858,6 +866,16 @@ c['builders'] += nibabel_bot.build_builders(
 c['builders'] += nibabel_bot.build_builders(
     (('nibabel-py3.3', osx_snowleopard_slaves),),
     python='python3.3')
+# Different versions of Pydicom
+c['builders'] += nibabel_bot.build_builders(
+    (('nibabel-py2.7-pyd0.9.7', osx_mountainlion_slaves),),
+    python='python2.7',
+    easy_depends = ('nose', 'pydicom==0.9.7'))
+c['builders'] += nibabel_bot.build_builders(
+    (('nibabel-py2.7-pyd0.9.8', osx_mountainlion_slaves),),
+    python='python2.7',
+    easy_depends = ('nose', 'pydicom==0.9.8'))
+# Nitime
 c['builders'] += nitime_bot.build_builders(
     (('nitime-py2.6', linux_64_slaves),
      ('nitime-py2.6-32', linux_32_slaves),
@@ -888,6 +906,13 @@ c['builders'] += nipy_bot.build_builders(
      ('nipy-py2.6-arm', arm_slaves),
      ('nipy-py2.6-xp', xp_32_slaves),
      ('nipy-py2.6-sparc', sparc_slaves)))
+# Python 3.2 into virtualenv
+c['builders'] += nipy_bot.build_builders(
+    (('nipy-py3.2', linux_64_slaves),),
+    python='python3.2')
+c['builders'] += nipy_bot.build_builders(
+    (('nipy-py3.3', osx_snowleopard_slaves),),
+    python='python3.3')
 c['builders'] += nipy_mbi_bot.build_builders(
     (('nipy-py2.6-mbi', linux_64_slaves),
      ('nipy-py2.6-mbi-32', linux_32_slaves),
@@ -916,6 +941,13 @@ c['builders'] += dipy_bot.build_builders((
      ('dipy-py2.6-arm', arm_slaves),
      ('dipy-py2.6-xp', xp_32_slaves),
      ('dipy-py2.6-sparc', sparc_slaves)))
+# Python 3.2 into virtualenv
+c['builders'] += dipy_bot.build_builders(
+    (('dipy-py3.2', linux_64_slaves),),
+    python='python3.2')
+c['builders'] += dipy_bot.build_builders(
+    (('dipy-py3.3', osx_snowleopard_slaves),),
+    python='python3.3')
 c['builders'] += nipype_bot.build_builders(
     (('nipype-py2.6', linux_64_slaves),
      ('nipype-py2.6-32', linux_32_slaves),
