--- a/master.cfg
+++ b/master.cfg
@@ -326,19 +326,22 @@ nipy_bot = GithubBot('nipy', 'nipy',
     test_cmd = nptest_command('nipy', doctests=True),
     doc_build_cmd = "cd doc && make dist",
     built_doc_src = "doc/dist",
-    easy_depends = ('nose', 'nibabel')
+    easy_depends = ('nose', 'nibabel'),
+    pip_depends = ('sympy',),
 )
 nipy_mbi_bot = GithubBot('matthew-brett', 'nipy',
     test_cmd = nptest_command('nipy', doctests=True),
     doc_build_cmd = "cd doc && make dist",
     built_doc_src = "doc/dist",
-    easy_depends = ('nose', 'nibabel')
+    easy_depends = ('nose', 'nibabel'),
+    pip_depends = ('sympy',),
 )
 nipy_alexis_bot = GithubBot('alexis-roche', 'nipy',
     test_cmd = nptest_command('nipy', doctests=True),
     doc_build_cmd = "cd doc && make dist",
     built_doc_src = "doc/dist",
-    easy_depends = ('nose', 'nibabel')
+    easy_depends = ('nose', 'nibabel'),
+    pip_depends = ('sympy',),
 )
 dipy_bot = GithubBot('nipy', 'dipy',
     test_cmd = shlex.split('nosetests --verbosity=3 --exe --with-doctest dipy'),
