--- a/master.cfg
+++ b/master.cfg
@@ -182,8 +182,6 @@ class GithubBot(object):
                             python=None,
                             easy_depends=None,
                             pip_depends=None):
-        if python is None:
-            python='python'
         if easy_depends is None:
             easy_depends = self.easy_depends
         if pip_depends is None:
@@ -191,8 +189,12 @@ class GithubBot(object):
         factory = BuildFactory()
         factory.addStep(Git(repourl=self.git_url, mode='copy', retry=(15, 5)))
         # Obviously requires virtualenv on the slave
+        if python is None:
+            py_str=''
+        else:
+            py_str = '--python=' + python
         factory.addStep(ShellCommand(command=shlex.split(
-            'virtualenv --python=%s --system-site-packages venv' % python)))
+            'virtualenv %s --system-site-packages venv' % py_str)))
         # Now we need the venv binary directory
         factory.addStep(FileDownload('slave_scripts/bs_tools.py',
                                      'bs_tools.py'))
@@ -345,7 +347,7 @@ nipy_alexis_bot = GithubBot('alexis-roche', 'nipy',
 )
 dipy_bot = GithubBot('nipy', 'dipy',
     test_cmd = shlex.split('nosetests --verbosity=3 --exe --with-doctest dipy'),
-    easy_depends = ('nose', 'nibabel')
+    easy_depends = ('nose', 'nibabel', 'cython>=0.17')
 )
 # dipy bot for linux machines with optional easy_depends that need an X window
 # for testing
@@ -951,6 +953,7 @@ c['builders'] += dipy_bot.build_builders(
 c['builders'] += dipy_bot.build_builders(
     (('dipy-py3.3', osx_snowleopard_slaves),),
     python='python3.3')
+# Nipype
 c['builders'] += nipype_bot.build_builders(
     (('nipype-py2.6', linux_64_slaves),
      ('nipype-py2.6-32', linux_32_slaves),
