BF: make cython a pip install
easy_install was failing

--- a/master.cfg
+++ b/master.cfg
@@ -347,7 +347,8 @@ nipy_alexis_bot = GithubBot('alexis-roche', 'nipy',
 )
 dipy_bot = GithubBot('nipy', 'dipy',
     test_cmd = shlex.split('nosetests --verbosity=3 --exe --with-doctest dipy'),
-    easy_depends = ('nose', 'nibabel', 'cython>=0.17')
+    easy_depends = ('nose', 'nibabel'),
+    pip_depends = ('cython>=0.17',)
 )
 # dipy bot for linux machines with optional easy_depends that need an X window
 # for testing
